requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta" 

[project]
name = "mqtt-topping-py"
version = "0.9.0"
description = "Syntactical sugar on top of the MQTT client cake"
authors = [
  {name = "Julian Krumow", email = "julian.krumow@artcom.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = [
    "tests"
]
